<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/hospital"
            android:scaleType="fitXY"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/gradient2_background"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_placeholder"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="50dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:textSize="35dp"
                    android:textColor="@android:color/white"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:shadowDy="8"
                    android:layout_marginBottom="5dp"
                    android:shadowRadius="20"
                    android:shadowColor="@color/colorPrimary"
                    android:shadowDx="8"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Add_hospital"
                    android:textColor="@color/color_white"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="20dp"

                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="0dp"
                android:layout_weight="1"

                >
                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="25dp"
                    >


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp"
                        >

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:layout_marginBottom="10dp"
                            android:padding="10dp"
                            android:textColorHint="@color/color_white"
                            android:textCursorDrawable="@drawable/cursor"
                            android:id="@+id/name"
                            android:hint="@string/name"
                            android:textColor="@color/color_white"
                            android:background="@drawable/custome_edittext"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:drawablePadding="10dp"
                            android:layout_marginBottom="5dp"
                             android:textColor="@color/color_white"
                            android:textSize="20sp"
                            android:drawableRight="@drawable/ic_trending_down_24dp"

                            android:text="@string/Select_hospital_location"
                            />
                        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                            android:id="@+id/map"
                            android:name="com.google.android.gms.maps.SupportMapFragment"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            />
                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardElevation="10dp"
                            android:layout_marginTop="20dp"
                            app:cardCornerRadius="20dp"
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="15dp"
                            android:layout_marginRight="25dp"
                            android:layout_marginLeft="25dp"
                            >
                            <com.balysv.materialripple.MaterialRippleLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/RipplyStyleLight"
                                >
                                <Button
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColor="@android:color/white"
                                    android:background="@drawable/backgrond_grad"
                                    android:text="@string/Add_hospital"
                                    android:onClick="Registration"
                                    android:textStyle="bold"
                                        />
                            </com.balysv.materialripple.MaterialRippleLayout>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>


            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signIn"
                android:textColor="@color/color_white"
                android:textStyle="normal"
                android:textSize="20dp"
                android:onClick="Login"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="25dp"
                android:gravity="center"
                tools:ignore="OnClick" />

        </LinearLayout>
        <include layout="@layout/progress_loding"/>
    </RelativeLayout>

</LinearLayout>