<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/hospital"
            android:scaleType="fitXY"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/gradient2_background"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_placeholder"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="50dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:textSize="35dp"
                    android:textColor="@android:color/white"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:shadowDy="8"
                    android:layout_marginBottom="5dp"
                    android:shadowRadius="20"
                    android:shadowColor="@color/colorPrimary"
                    android:shadowDx="8"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Confrim_hospital_code"
                    android:textColor="@color/color_white"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="20dp"

                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"

                >
                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="190dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="25dp"
                    >


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp"
                        >

                        <com.chaos.view.PinView
                            android:id="@+id/pinView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:itemCount="5"
                            android:inputType="number"
                            app:lineColor="@color/color_white"
                            android:layout_gravity="center"
                            android:textColor="@color/color_white"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            style="@style/PinWidget.PinView" />


                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardElevation="10dp"
                            android:layout_marginTop="20dp"
                            app:cardCornerRadius="20dp"
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="15dp"
                            android:layout_marginRight="25dp"
                            android:layout_marginLeft="25dp"
                            >
                            <com.balysv.materialripple.MaterialRippleLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/RipplyStyleLight"
                                >
                                <Button
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColor="@android:color/white"
                                    android:background="@drawable/backgrond_grad"
                                    android:text="@string/confirm"
                                    android:textStyle="bold"
                                    android:onClick="loginOn"
                                    android:id="@+id/register_bu"
                                    />
                            </com.balysv.materialripple.MaterialRippleLayout>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Add_hospital"
                android:textColor="@color/color_white"
                android:textStyle="normal"
                android:textSize="20dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="25dp"
                android:gravity="center"
                android:onClick="registerOn"

                tools:ignore="OnClick" />
        </LinearLayout>

        <include layout="@layout/progress_loding" />
    </RelativeLayout>

</LinearLayout>